# telegram-send-file

./: README.md  SKILL.md  pyproject.toml
scripts/: telegram_send_file.py
tests/: conftest.py  test_telegram_send_file.py
